@@ -1,5 +1,6 @@
 Changelog for CmdArgs
 
+    Add verbosityArgs to customise the verbose/quiet flags
     Add helpArg/versionArg flags to customise those flags
     Support multiline summary using \n escape codes
 0.6.1
